# audio-batch-transcribe

./: .gitignore  README.md  example.py  pyproject.toml  transcribe.py
