[tool.poetry]
name = "audio-batch-transcribe"
version = "0.1.0"
description = ""
authors = ["Andre Luiz M. Rocha <andrecorumba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
transformers = "^4.37.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
